[package]
name = "notemd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
chrono = "0.4.19"
clap = { version = "3.1.18", features = ["derive", "cargo"] }
fern = { version = "0.6.1", features = ["colored"] }
home = "0.5.3"
log = "0.4.17"
tui = "0.18.0"
