[package]
name = "notemd"
version = "0.3.0"
edition = "2021"
authors = ["Maximilian Schmidt <maximilian@schmidt.so>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/schmidma/NoteMD"
description = "A blazingly fast TUI to manage your markdown notes"
homepage = "https://github.com/schmidma/NoteMD"

[dependencies]
anyhow = "1.0.57"
chrono = "0.4.19"
clap = { version = "3.1.18", features = ["derive", "cargo"] }
crossterm = "0.23.2"
fern = "0.6.1"
grep = "0.2.8"
home = "0.5.3"
ignore = "0.4.18"
log = "0.4.17"
tui = "0.18.0"
unicode-width = "0.1.9"
